syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto";
option java_outer_classname = "ClientToClientProto";
option objc_class_prefix = "CTC";

package proto;

service ClientToClient {
  rpc RequestLocationProof (RequestLocationProofRequest) returns (RequestLocationProofReply){}
}


message RequestLocationProofRequest {
  string request = 1;
  bytes digitalSignature = 2;
}

message RequestLocationProofReply {
  repeated bytes proof = 1;
  repeated bytes digitalSignature = 2;
  repeated bytes witnessSessionKey = 3;
  repeated bytes witnessIv = 4;
  repeated string server = 5;

}