syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto.HA";
option java_outer_classname = "HAToServerProto";
option objc_class_prefix = "HATS";

package proto.HA;

service HAToServer {
  rpc ObtainLocationReport (ObtainLocationReportRequest) returns (ObtainLocationReportReply){}
  rpc ObtainUsersAtLocation (ObtainUsersAtLocationRequest) returns (ObtainUsersAtLocationReply){}
  rpc Handshake (HandshakeRequest) returns (HandshakeReply){}
}

message ObtainLocationReportRequest {
  string username = 1;
  bytes message = 2;
  bytes signature = 3;

}

message ObtainLocationReportReply {
  bytes message = 1;
  bytes signature = 2;
}

message ObtainUsersAtLocationRequest {
  string username = 1;
  bytes message = 2;
  bytes signature = 3;

}

message ObtainUsersAtLocationReply {
  bytes message = 1;
  bytes signature = 2;
}

message HandshakeRequest{
  bytes encryptedUsernameSessionKey = 1;
  bytes signature = 2;
  bytes iv = 3;
}

message HandshakeReply{

}



